[package]
name = "vimgolf"
version = "0.1.0"
authors = ["Jonny-exe <69385502+Jonny-exe@users.noreply.github.com>"]
edition = "2018"

[dependencies]
actix-rt = "1.0.0"
actix-web = "3.0.0"
serde = { version = "1.0.104", features = ["derive"]}
dotenv = "0.15.0"
config = "0.10.1"
tokio-pg-mapper = "0.1.4"
tokio-pg-mapper-derive = "0.1.4"
deadpool-postgres = "0.5.0"
tokio-postgres = "0.5.1"
actix-cors = "0.5.4"